--- a/styles.css
+++ b/styles.css
@@ -191,5 +191,17 @@ button {
   }
 }
 
+@media only screen and (min-width: 792px) and (max-width: 1600px)  {
+  #histories{
+     margin-bottom: 20px;
+     display: grid;
+     grid-template-columns: repeat(3, 1fr); 
+     grid-gap: 20px;  
+     
+     
+  }
+ 
+ }  
+
 
 
