--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   background-position: left top;
   font-family: "Zilla Slab", serif;
 }
+.blog{
+  color: white;
+  text-decoration: none;
+  font-size: 2.5rem;
+  position: absolute;
+  top: 3%;
+  right: 5%;
+}
 
 .box-container {
   width: 70%;
@@ -152,9 +160,12 @@ button {
   height: 100%;
   padding: 50px;
   display: flex;
+  display: inline-block;
   justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 20px 30px;
+  text-align: center;
+  padding: 20 30px;
   color: white;
   border-radius: 15px;
   background: rgb(255, 255, 255);
